updated CV and intro, 01/2025

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ title: John Hadaway
     </div>
     <div class="container" style="max-width: 800px;">
         <p>
-            My name is John Hadaway. I am interested in the built environment, mobility, and data.
-            I am currently pursuing a Master of Social Sciences in Urban Studies and Planning at the University of Helsinki and visiting the MIT Senseable City Lab.
-            I am Australian-Filipino-Finnish and based in Helsinki. 
+            My name is John Hadaway. I am a spatial data analyst interested in cities and interactive data visualisation. 
+            I am pursuing a Master of Social Sciences in Urban Studies and Planning at the University of Helsinki and visiting the MIT Senseable City Lab. 
+            I am Australian-Filipino-Finnish and based in Helsinki.
         </p>
         <p>
             <a href="/assets/docs/CV.pdf" class="link" target="_blank">CV</a> | 
