--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: John Hadaway
     </div>
     <div class="container" style="max-width: 800px;">
         <p>
-            My name is John Hadaway. I am a spatial data analyst interested in cities and interactive data visualisation. 
+            My name is John Hadaway. I am a spatial data analyst interested in cities, climate, and interactive data visualisation. 
             I am pursuing a Master of Social Sciences in Urban Studies and Planning at the University of Helsinki and visiting the MIT Senseable City Lab. 
             I am Australian-Filipino-Finnish and based in Helsinki.
         </p>
